# takrust

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  rustak_architecture.md  rustfmt.toml
.beads/: issues.jsonl
.github/workflows/: quality-gates.yml
benches/: README.md  serialisation.rs  sim_track_generation.rs  transport_throughput.rs
crates/rustak/: Cargo.toml
crates/rustak-admin/: Cargo.toml
crates/rustak-admin/src/: config.rs  handlers.rs  lib.rs  server.rs
crates/rustak-bridge/: Cargo.toml
crates/rustak-bridge/src/: correlator.rs  dedup.rs  lib.rs  mapping.rs  time_policy.rs
crates/rustak-bridge/tests/: replay_determinism.rs
crates/rustak-cli/: Cargo.toml
crates/rustak-cli/src/: lib.rs  main.rs
crates/rustak-commo/: Cargo.toml
crates/rustak-commo/src/: lib.rs
crates/rustak-config/: Cargo.toml
crates/rustak-config/src/: lib.rs  redact.rs  schema.rs  validate.rs
crates/rustak-core/: Cargo.toml
crates/rustak-core/src/: detail.rs  lib.rs  model.rs  time.rs
crates/rustak-cot/: Cargo.toml
crates/rustak-cot/src/: lib.rs
crates/rustak-cot/tests/: extension_registry.rs
crates/rustak-crypto/: Cargo.toml
crates/rustak-crypto/src/: lib.rs
crates/rustak-ffi/: Cargo.toml
crates/rustak-ffi/src/: lib.rs
crates/rustak-geo/: Cargo.toml
crates/rustak-geo/src/: lib.rs
crates/rustak-io/: Cargo.toml
crates/rustak-io/benches/: layer_overhead.rs
crates/rustak-io/src/: layers.rs  lib.rs
crates/rustak-io/tests/: layer_overhead_budget.rs  layer_stack_determinism.rs
crates/rustak-limits/: Cargo.toml
crates/rustak-limits/src/: error.rs  lib.rs
crates/rustak-net/: Cargo.toml
crates/rustak-net/src/: bounded.rs  delimiter.rs  error.rs  length_prefixed.rs  lib.rs
crates/rustak-proto/: Cargo.toml
crates/rustak-proto/src/: lib.rs
crates/rustak-proto/tests/: payload_codec.rs
crates/rustak-record/: Cargo.toml
crates/rustak-record/src/: index.rs  integrity.rs  interop.rs  lib.rs  writer.rs
crates/rustak-sapient/: Cargo.toml
crates/rustak-sapient/src/: codec.rs  framing.rs  lib.rs  session.rs
crates/rustak-sapient/tests/: limits_enforcement.rs  versioned_conformance.rs
crates/rustak-server/: Cargo.toml
crates/rustak-server/src/: lib.rs
crates/rustak-server/tests/: connection_contract.rs
crates/rustak-sim/: Cargo.toml
crates/rustak-sim/src/: geo.rs  lib.rs  scenario.rs  sensor.rs  sweep.rs  truth.rs
crates/rustak-transport/: Cargo.toml
crates/rustak-transport/src/: config.rs  lib.rs  queue.rs  udp.rs
crates/rustak-transport/tests/: limits_enforcement.rs  udp_policy.rs
crates/rustak-wire/: Cargo.toml
crates/rustak-wire/src/: events.rs  framing.rs  lib.rs  negotiation.rs
crates/rustak-wire/tests/: downgrade_policy_matrix.rs  limits_enforcement.rs  malformed_control_fixtures.rs  proto_payload_matrix.rs
crates/rustak/src/: lib.rs
crates/rustak/tests/: facade.rs
docs/: conformance.md  cot_type_reference.md  deployment_guide.md  limits_contract.md  operator_playbook.md  quickstart_bridge.md  quickstart_tak_only.md  sapient_reference.md  security_audit.md  tak_sapient_mapping.md  tak_server_api.md
examples/: README.md  scenario_matrix.yaml
fuzz/: Cargo.toml  README.md  limits_enforcement_hooks.md
tests/fixtures/: README.md
tests/fixtures/certs/: README.md  dev_client.cert.pem.example  dev_client.key.pem.example
tests/fixtures/cot/: minimal_position.xml
tests/fixtures/scenarios/: bridge_replay_minimal.json
tests/integration/: README.md  docker-compose.tak-server-smoke.yml  run_tak_server_smoke.sh
tests/interop_harness/: Cargo.toml
tests/interop_harness/src/: lib.rs
tests/interop_harness/tests/: deterministic_replay_gate.rs  tak_server_docker_smoke.rs
tests/interop_harness/tests/fixtures/: bridge_replay_fixture.json
tests/protocol_conformance/: wire_downgrade_policy_matrix.md
tests/protocol_conformance/fixtures/: proto_v1_cot_message.xml
tests/release_profiles/: Cargo.toml
tests/release_profiles/tests/: profile_matrix.rs
tests/sapient_conformance/fixtures/: versioned_codec_session.json
xtask/: Cargo.toml
xtask/src/: main.rs
