[package]
name = "rustak-fuzz-hooks"
version = "0.1.0"
edition = "2021"
publish = false
description = "Non-interactive fuzz hook entry points for limits enforcement"
license = "MIT OR Apache-2.0"

[dependencies]
rustak-sapient = { path = "../crates/rustak-sapient" }
rustak-transport = { path = "../crates/rustak-transport" }
rustak-wire = { path = "../crates/rustak-wire" }

[workspace]
