[package]
name = "rustak-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line diagnostics and utilities for RusTAK"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rustak"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustak = { path = "../rustak" }
rustak-config = { path = "../rustak-config" }
rustak-sapient = { path = "../rustak-sapient" }
rustak-server = { path = "../rustak-server" }
rustak-transport = { path = "../rustak-transport" }
rustak-wire = { path = "../rustak-wire" }
thiserror = "2.0"
