[package]
name = "rustak-io"
version = "0.1.0"
edition = "2021"
description = "Runtime-agnostic async message traits and envelopes for RusTAK"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.10"
futures = "0.3"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "layer_overhead"
harness = false
