[package]
name = "rustak-limits"
version = "0.1.0"
edition = "2021"
description = "Shared validated resource budgets for RusTAK boundary crates"
license = "MIT OR Apache-2.0"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
