[package]
name = "rustak-net"
version = "0.1.0"
edition = "2021"
description = "Protocol-agnostic async networking primitives for RusTAK"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["io-util", "macros", "rt-multi-thread"] }
