[package]
name = "rustak-sapient"
version = "0.1.0"
edition = "2021"
description = "SAPIENT session configuration contracts for RusTAK"
license = "MIT OR Apache-2.0"

[dependencies]
rustak-limits = { path = "../rustak-limits" }
rustak-net = { path = "../rustak-net" }
thiserror = "2.0"
tokio = { version = "1.49", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["io-util", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
