[package]
name = "rustak-transport"
version = "0.1.0"
edition = "2021"
description = "Transport-layer configuration contracts for RusTAK"
license = "MIT OR Apache-2.0"

[dependencies]
rustak-limits = { path = "../rustak-limits" }
rustak-io = { path = "../rustak-io" }
rustak-wire = { path = "../rustak-wire" }
thiserror = "2.0"

[workspace]
