[package]
name = "rustak-wire"
version = "0.1.0"
edition = "2021"
description = "TAK wire framing configuration contracts for RusTAK"
license = "MIT OR Apache-2.0"

[dependencies]
rustak-limits = { path = "../rustak-limits" }
rustak-net = { path = "../rustak-net" }
thiserror = "2.0"
tokio = { version = "1.49", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["io-util", "macros", "rt-multi-thread"] }

[workspace]
