[package]
name = "rustak"
version = "0.1.0"
edition = "2021"
description = "Facade crate with unified public API and error surface for RusTAK"
license = "MIT OR Apache-2.0"

[dependencies]
rustak-admin = { path = "../rustak-admin" }
rustak-bridge = { path = "../rustak-bridge" }
rustak-config = { path = "../rustak-config" }
rustak-core = { path = "../rustak-core" }
rustak-io = { path = "../rustak-io" }
rustak-limits = { path = "../rustak-limits" }
rustak-record = { path = "../rustak-record" }
rustak-sapient = { path = "../rustak-sapient" }
rustak-transport = { path = "../rustak-transport" }
rustak-wire = { path = "../rustak-wire" }
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"
rustak-sim = { path = "../rustak-sim" }

[[bench]]
name = "serialisation"
harness = false
path = "../../benches/serialisation.rs"

[[bench]]
name = "transport_throughput"
harness = false
path = "../../benches/transport_throughput.rs"

[[bench]]
name = "sim_track_generation"
harness = false
path = "../../benches/sim_track_generation.rs"
